--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "5to6-codemod": "^1.7.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "create-react-class": "^15.6.3",
     "prop-types": "^15.6.2",
     "ramda": "^0.25.0",
@@ -11,12 +13,28 @@
     "react-dom": "^16.4.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "aws-sdk": "^2.1.26",
+    "bcrypt": "^0.8.2",
+    "body-parser": "^1.12.2",
+    "compression": "^1.4.3",
+    "express": "^4.12.3",
+    "jwt-simple": "^0.3.0",
+    "mime": "^1.3.4",
+    "moment": "^2.10.2",
+    "mongoose": "^4.0.1",
+    "node-uuid": "^1.4.3",
+    "passport": "^0.2.1",
+    "passport-facebook": "^2.0.0",
+    "ramda": "^0.13.0",
+    "sha256": "^0.2.0",
+    "sockjs": "^0.3.15"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve-prod": "./node_modules/.bin/babel server --out-dir serverbuild && node ./serverbuild/server.js"
   }
 }
