--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "postinstall": "yarn build",
     "serve-prod": "./node_modules/.bin/babel server --out-dir serverbuild && node ./serverbuild/server.js"
   }
 }
