--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "create-react-class": "^15.6.3",
     "dotenv": "^6.0.0",
     "express": "^4.12.3",
+    "husky": "^0.14.3",
     "jwt-simple": "^0.3.0",
+    "lint-staged": "^7.2.2",
     "mime": "^1.3.4",
     "moment": "^2.10.2",
     "mongoose": "^4.0.1",
     "node-uuid": "^1.4.3",
     "passport": "^0.2.1",
     "passport-facebook": "^2.0.0",
+    "prettier": "^1.14.2",
     "prop-types": "^15.6.2",
     "ramda": "^0.13.0",
     "react": "^16.4.2",
@@ -31,6 +34,7 @@
     "sockjs": "^0.3.15"
   },
   "scripts": {
+    "precommit": "lint-staged",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
@@ -38,9 +42,12 @@
     "postinstall": "yarn build",
     "serve-prod": "./node_modules/.bin/babel server --out-dir serverbuild && node ./serverbuild/server.js"
   },
+  "lint-staged": {
+    "src/**/*.{js,jsx,json,css}": ["prettier --write", "git add"]
+  },
   "prettier": {
-      "printWidth": 100,
-      "singleQuote": true,
-      "trailingComma": "all"
+    "printWidth": 100,
+    "singleQuote": true,
+    "trailingComma": "all"
   }
 }
