--- a/.env.default
+++ b/.env.default
@@ -4,5 +4,4 @@ AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 S3BUCKET_NAME=
 MONGO_URL=
-REACT_APP_BASE_URL=https://glacial-journey-58935.herokuapp.com:80
-REACT_APP_SOCKET_URL=https://glacial-journey-58935.herokuapp.com:3080
+REACT_APP_API_URL=https://glacial-journey-58935.herokuapp.com
